clean up fusion preprocess long doc

--- a/bert500.ipynb
+++ b/bert500.ipynb
@@ -32,19 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Train_data = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "Train_data = pd.DataFrame()\n",
     "# Read training data\n",
     "with open(\"train.csv\", 'r') as f:\n",
     "    train_data = f.read().splitlines()\n",
