--- a/Graph_GCN.ipynb
+++ b/Graph_GCN.ipynb
@@ -21,14 +21,14 @@
     "from os import path\n",
     "\n",
     "import torch.nn.functional as F\n",
-    "from torch_geometric.nn import GCNConv"
+    "from torch_geometric.nn import GCNConv\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# With the tfidf vectorizer"
    ]
@@ -36,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read training data\n",
@@ -93,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_test = np.array(X_test.todense())\n",
@@ -105,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -124,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 321,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "classes = ['business/finance','education/research','entertainment','health/medical','news/press','politics/government/law','sports','tech/science']\n",
@@ -143,9 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_graph_method = pd.DataFrame({'emb': emb, 'label': labels,'host' :hosts, 'mask' : mask })\n",
@@ -155,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
